--- a/.ctprc
+++ b/.ctprc
@@ -4,3 +4,25 @@ path_name        : hx
 install_location : .
 install_files:
   - themes/*
+install_flavours: # Specific flavours
+  latte:
+    default: # Default and no-italic variants
+      - themes/default/latte.toml
+    no-italics:
+      - themes/no-italics/latte.toml
+  frappe:
+    default:
+      - themes/default/frappe.toml
+    no-italics:
+      - themes/no-italics/frappe.toml
+  macchiato:
+    default:
+      - themes/default/macchiato.toml
+    no-italics:
+      - themes/no-italics/macchiato.toml
+  mocha:
+    default:
+      - themes/default/mocha.toml
+    no-italics:
+      - themes/no-italics/mocha.toml
+  to: themes # Install location
