--- a/.ctprc
+++ b/.ctprc
@@ -25,8 +25,7 @@ install_flavours: # Specific flavours
       - themes/default/catppuccin_mocha.toml
     - no-italics:
       - themes/no-italics/catppuccin_mocha.toml
-  to:
-    - themes/ # Install location
+  to: themes/ # Install location
 one_flavour: false # Only one flavour?
 modes: # Additional modes
   - no-italics
