--- a/.ctprc
+++ b/.ctprc
@@ -1,7 +1,9 @@
 # A Catppuccin RC file for Helix. In beta, specs may change.
 app_name: Helix
 path_name: hx
-install_location: .
+install_location:
+  unix: ~/.config/helix/config.toml
+  windows: %appdata%/helix/config.toml
 install_files:
   - themes/
 install_flavours: # Specific flavours
