--- a/.ctprc
+++ b/.ctprc
@@ -3,7 +3,7 @@ app_name: Helix
 path_name: hx
 install_location:
   unix: ~/.config/helix/config.toml
-  windows: %appdata%/helix/config.toml
+  windows: \%appdata\%/helix/config.toml
 install_files:
   - themes/
 install_flavours: # Specific flavours
