--- a/.catppuccin.yaml
+++ b/.catppuccin.yaml
@@ -3,8 +3,8 @@ app_name: Helix # name of app
 binary_name: hx # name of executably
 installation: # Install instructions
   location:
-    macos: ~/.config/helix
-    linux: ~/.config/helix
+    macos: ~/.config/helix/
+    linux: ~/.config/helix/
     windows: "%appdata%/helix/"
   flavours: # Specific flavours
     all:
